--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -273,9 +273,9 @@
                                 <DataGridTextColumn x:Name="newghltotalCol" Header="样品中汞含量mg/m3" Binding="{Binding AirG,Mode=TwoWay}" Width="150" IsReadOnly="True"></DataGridTextColumn>
                                 
                                 <DataGridTextColumn x:Name="newgndCol" Header="汞浓度ng/mL" Width="100" Binding="{Binding Density,Mode=TwoWay}" Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="newypqtzllCol" Header="样品气体总流量L/min" Width="120"  Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="newghlCol" Header="汞含量mg" Width="100"  Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="newjylCol" Header="进样量ml" Width="80"  Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="newypqtzllCol" Header="样品气体总流量L/min" Width="120" Binding="{Binding AirTotalFluent,Mode=TwoWay}"  Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="newghlCol" Header="汞含量mg" Width="100" Binding="{Binding ThingInSamle,Mode=TwoWay}" Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="newjylCol" Header="进样量ml" Width="80"  Binding="{Binding InSampleQuality,Mode=TwoWay}" Visibility="Collapsed" IsReadOnly="True"></DataGridTextColumn>
                                 
                                 <DataGridTemplateColumn Header="选择标样" Width="*">
                                     <DataGridTemplateColumn.CellTemplate >
